src/test/deca/context/invalid/SansObjet/DeclVar-Mod-string-int-float.deca
// Description:
//    Declaration of a string variable using % operation between a int variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  2; 
    float y = 10.01; 
    string z = x % y ; 
}
